Prevent long domain names from overflowing the DomainSuggestion component (#36220)
* Prevent long domain names from overflowing the DomainSuggestion component (#36024)

* Add `word-break: break-all` to the `domain-skip-suggestion` used in the `domains-launch` step

* Add left padding to domain-product-price to prevent long domains from running into the product price

--- a/client/components/domains/domain-suggestion/style.scss
+++ b/client/components/domains/domain-suggestion/style.scss
@@ -133,6 +133,7 @@
 
 	.domain-registration-suggestion__title {
 		width: auto;
+		max-width: 100%;
 		padding-right: 0.2em;
 	}
 
@@ -149,6 +150,7 @@
 
 .domain-registration-suggestion__title {
 	font-size: 16px;
+	word-break: break-all;
 
 	@include breakpoint( '>480px' ) {
 		align-self: center;
